workflow 基本功能和样式

--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ren-flow</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<html lang="zh">
+    <head>
+
+        <meta charset="utf-8">
+        <meta name="viewport" id="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5, user-scalable=0">
+        <meta name="referrer" content="no-referrer" id="referrer">
+        <meta name="theme-color" content="#606E7A">
+        <title>Ren Flow</title>
+        <link rel="stylesheet" href="/bcui/css/style.css">
+        <link rel="stylesheet" href="/bcui/css/color-light.css">
+        <link rel="stylesheet" href="/css/append-light.css">
+    </head>
+
+    <body>
+        <div id="app"></div>
+        <script type="module" src="/src/main.ts"></script>
+        <script src="/bcui/js/main.js"></script>
+    </body>
 </html>
